--- a/rewrite.yml
+++ b/rewrite.yml
@@ -1,134 +1,81 @@
 ---
 type: specs.openrewrite.org/v1beta/recipe
-name: com.amazonaws.elasticgumby.java.migrate.AddJaxbRuntime
-displayName: Add JAXB/JAX-WS runtime
-description: Add an explicit JAXB/JAX-WS runtime and upgrade the dependencies to Jakarta EE 8.
+name: com.amazonaws.elasticgumby.java.migrate.RemediateDeprecationsInJdk
+displayName: Remediate deprecations in JDK
+description: Remediate deprecations in JDK.
 recipeList:
-  - org.openrewrite.java.migrate.javax.AddJaxbDependencies
-  - org.openrewrite.java.migrate.javax.AddJaxwsDependencies
-  - org.openrewrite.java.migrate.javax.AddInjectDependencies
+  - org.openrewrite.staticanalysis.BigDecimalRoundingConstantsToEnums
+  - org.openrewrite.staticanalysis.PrimitiveWrapperClassConstructorToValueOf
+  - org.openrewrite.java.migrate.concurrent.JavaConcurrentAPIs
+  - org.openrewrite.java.migrate.lang.JavaLangAPIs
+  - org.openrewrite.java.migrate.logging.JavaLoggingAPIs
+  - org.openrewrite.java.migrate.lombok.UpdateLombokToJava11
+  - org.openrewrite.java.migrate.net.JavaNetAPIs
+  - org.openrewrite.java.migrate.sql.JavaSqlAPIs
+  - org.openrewrite.java.migrate.javax.JavaxLangModelUtil
+  - org.openrewrite.java.migrate.javax.JavaxManagementMonitorAPIs
+  - org.openrewrite.java.migrate.javax.JavaxXmlStreamAPIs
+  - org.openrewrite.java.migrate.DeprecatedJavaxSecurityCert
+  - org.openrewrite.java.migrate.DeprecatedLogRecordThreadID
+  - org.openrewrite.java.migrate.RemovedLegacySunJSSEProviderName
+  - org.openrewrite.java.migrate.Jre17AgentMainPreMainPublic
 
 ---
 type: specs.openrewrite.org/v1beta/recipe
-name: org.openrewrite.java.migrate.javax.AddJaxbDependencies
-displayName: Add explicit JAXB dependencies
-description: >
-  This recipe will add explicit dependencies for Jakarta EE 8 when a Java 8 application is using JAXB. Any existing
-  dependencies will be upgraded to the latest version of Jakarta EE 8. The artifacts are moved to Jakarta EE 8 version 2.x
-  which allows for the continued use of the `javax.xml.bind` namespace. Running a full javax to Jakarta migration
-  using `org.openrewrite.java.migrate.jakarta.JavaxMigrationToJakarta` will update to versions greater than 3.x which
-  necessitates the package change as well.
+name: org.openrewrite.java.migrate.DeprecatedJavaxSecurityCert
+displayName: Use `java.security.cert` instead of `javax.security.cert`
+description: The `javax.security.cert` package has been deprecated for removal.
 tags:
-  - javax
-  - java11
-  - jaxb
-  - jakarta
-  - glassfish
+  - java17
 recipeList:
-  # Remove the legacy jaxb-core artifact
-  - org.openrewrite.java.dependencies.RemoveDependency:
-      groupId: com.sun.xml.bind
-      artifactId: jaxb-core
-  - org.openrewrite.maven.RemoveManagedDependency:
-      groupId: com.sun.xml.bind
-      artifactId: jaxb-core
-  # Change any existing places in the project poms that use the jaxb-api.
-  - org.openrewrite.java.dependencies.ChangeDependency:
-      oldGroupId: javax.xml.bind
-      oldArtifactId: jaxb-api
-      newGroupId: jakarta.xml.bind
-      newArtifactId: jakarta.xml.bind-api
-      newVersion: 2.3.x
-  - org.openrewrite.maven.ChangeManagedDependencyGroupIdAndArtifactId:
-      oldGroupId: javax.xml.bind
-      oldArtifactId: jaxb-api
-      newGroupId: jakarta.xml.bind
-      newArtifactId: jakarta.xml.bind-api
-      newVersion: 2.3.x
-  # Add the jakarta JAXB artifact if it is missing but a project uses types in java.xml.bind
-  - org.openrewrite.java.dependencies.AddDependency:
-      groupId: jakarta.xml.bind
-      artifactId: jakarta.xml.bind-api
-      version: 2.3.x
-      onlyIfUsing: javax.xml.bind..*
-      acceptTransitive: true
-  # If a project already had the jakarta api, make sure it is at the latest version.
-  - org.openrewrite.java.dependencies.UpgradeDependencyVersion:
-      groupId: jakarta.xml.bind
-      artifactId: jakarta.xml.bind-api
-      newVersion: 2.3.x
-  # Add the jaxb runtime to any projects that have a transitive dependency on the api
-  - org.openrewrite.java.migrate.javax.AddJaxbRuntime:
-      runtime: glassfish
-  # Remove the version from added dependencies when a managed version exists.
-  - org.openrewrite.maven.RemoveRedundantDependencyVersions:
-      groupPattern: org.glassfish.jaxb
-      artifactPattern: "*"
-      onlyIfVersionsMatch: true
-  - org.openrewrite.maven.RemoveRedundantDependencyVersions:
-      groupPattern: com.sun.xml.bind
-      artifactPattern: "*"
-      onlyIfVersionsMatch: true
-  - org.openrewrite.maven.RemoveRedundantDependencyVersions:
-      groupPattern: jakarta.xml.bind
-      artifactPattern: "*"
-      onlyIfVersionsMatch: true
+  - org.openrewrite.java.ChangePackage:
+      oldPackageName: javax.security.cert
+      newPackageName: java.security.cert
 ---
 type: specs.openrewrite.org/v1beta/recipe
-name: org.openrewrite.java.migrate.javax.AddJaxwsDependencies
-displayName: Add explicit JAX-WS dependencies
-description: >
-  This recipe will add explicit dependencies for Jakarta EE 8 when a Java 8 application is using JAX-WS. Any existing
-  dependencies will be upgraded to the latest version of Jakarta EE 8. **The artifacts are moved to Jakarta EE 8 but the
-  application can continue to use the `javax.xml.bind` namespace.
+name: org.openrewrite.java.migrate.RemovedLegacySunJSSEProviderName
+displayName: Use `SunJSSE` instead of `com.sun.net.ssl.internal.ssl.Provider`
+description: The `com.sun.net.ssl.internal.ssl.Provider` provider name was removed.
 tags:
-  - javax
-  - java11
-  - jaxb
-  - jakarta
-  - glassfish
+  - java17
 recipeList:
-  # Remove the legacy jaxws-ri artifact
-  - org.openrewrite.java.dependencies.RemoveDependency:
-      groupId: com.sun.xml.ws
-      artifactId: jaxws-ri
-  - org.openrewrite.maven.RemoveManagedDependency:
-      groupId: com.sun.xml.ws
-      artifactId: jaxws-ri
-  # Change any existing places in the project poms that use the jaxb-api.
-  - org.openrewrite.java.dependencies.ChangeDependency:
-      oldGroupId: javax.xml.ws
-      oldArtifactId: jaxws-api
-      newGroupId: jakarta.xml.ws
-      newArtifactId: jakarta.xml.ws-api
-      newVersion: 2.3.x
-  - org.openrewrite.maven.ChangeManagedDependencyGroupIdAndArtifactId:
-      oldGroupId: javax.xml.ws
-      oldArtifactId: jaxws-api
-      newGroupId: jakarta.xml.ws
-      newArtifactId: jakarta.xml.ws-api
-      newVersion: 2.3.x
-  # Add the jakarta JAXB artifact if it is missing but a project uses types in java.xml.bind
-  - org.openrewrite.java.dependencies.AddDependency:
-      groupId: jakarta.xml.ws
-      artifactId: jakarta.xml.ws-api
-      version: 2.3.x
-      onlyIfUsing: javax.jws..*
-      acceptTransitive: true
-  # If a project already had the jakarta api, make sure it is at the latest version.
-  - org.openrewrite.java.dependencies.UpgradeDependencyVersion:
-      groupId: jakarta.xml.ws
-      artifactId: jakarta.xml.ws-api
-      newVersion: 2.3.x
-  # Add the jaxb runtime to any projects that have a transitive dependency on the api
-  - org.openrewrite.java.migrate.javax.AddJaxwsRuntime
-  # Remove the version from added dependencies when a managed version exists.
-  - org.openrewrite.maven.RemoveRedundantDependencyVersions:
-      groupPattern: jakarta.xml.ws
-      artifactPattern: "*"
-      onlyIfVersionsMatch: true
-  - org.openrewrite.maven.RemoveRedundantDependencyVersions:
-      groupPattern: com.sun.xml.ws
-      artifactPattern: "*"
-      onlyIfVersionsMatch: true
-
+  - org.openrewrite.java.migrate.ReplaceStringLiteralValue:
+      oldLiteralValue: com.sun.net.ssl.internal.ssl.Provider
+      newLiteralValue: SunJSSE
+---
+type: specs.openrewrite.org/v1beta/recipe
+name: org.openrewrite.java.migrate.DeprecatedLogRecordThreadID
+displayName: Adopt `setLongThreadID` in `java.util.logging.LogRecord`
+description: Avoid using the deprecated methods in `java.util.logging.LogRecord`
+tags:
+  - java17
+recipeList:
+  - org.openrewrite.java.ChangeMethodName:
+      methodPattern: java.util.logging.LogRecord getThreadID()
+      newMethodName: getLongThreadID
+  - org.openrewrite.java.migrate.ChangeMethodInvocationReturnType:
+      methodPattern: java.util.logging.LogRecord getLongThreadID()
+      newReturnType: long
+  - org.openrewrite.java.ChangeMethodName:
+      methodPattern: java.util.logging.LogRecord setThreadID(int)
+      newMethodName: setLongThreadID
+---
+type: specs.openrewrite.org/v1beta/recipe
+name: org.openrewrite.java.migrate.Jre17AgentMainPreMainPublic
+displayName: Set visibility of `premain` and `agentmain` methods to `public`
+description: Check for a behavior change in Java agents.
+tags:
+  - java17
+recipeList:
+  - org.openrewrite.java.ChangeMethodAccessLevel:
+      methodPattern: "*..* agentmain(java.lang.String)"
+      newAccessLevel: public
+  - org.openrewrite.java.ChangeMethodAccessLevel:
+      methodPattern: "*..* agentmain(java.lang.String, java.lang.instrument.Instrumentation)"
+      newAccessLevel: public
+  - org.openrewrite.java.ChangeMethodAccessLevel:
+      methodPattern: "*..* premain(java.lang.String)"
+      newAccessLevel: public
+  - org.openrewrite.java.ChangeMethodAccessLevel:
+      methodPattern: "*..* premain(java.lang.String, java.lang.instrument.Instrumentation)"
+      newAccessLevel: public
