--- a/rewrite.yml
+++ b/rewrite.yml
@@ -1,81 +1,17 @@
 ---
 type: specs.openrewrite.org/v1beta/recipe
-name: com.amazonaws.elasticgumby.java.migrate.RemediateDeprecationsInJdk
-displayName: Remediate deprecations in JDK
-description: Remediate deprecations in JDK.
-recipeList:
-  - org.openrewrite.staticanalysis.BigDecimalRoundingConstantsToEnums
-  - org.openrewrite.staticanalysis.PrimitiveWrapperClassConstructorToValueOf
-  - org.openrewrite.java.migrate.concurrent.JavaConcurrentAPIs
-  - org.openrewrite.java.migrate.lang.JavaLangAPIs
-  - org.openrewrite.java.migrate.logging.JavaLoggingAPIs
-  - org.openrewrite.java.migrate.lombok.UpdateLombokToJava11
-  - org.openrewrite.java.migrate.net.JavaNetAPIs
-  - org.openrewrite.java.migrate.sql.JavaSqlAPIs
-  - org.openrewrite.java.migrate.javax.JavaxLangModelUtil
-  - org.openrewrite.java.migrate.javax.JavaxManagementMonitorAPIs
-  - org.openrewrite.java.migrate.javax.JavaxXmlStreamAPIs
-  - org.openrewrite.java.migrate.DeprecatedJavaxSecurityCert
-  - org.openrewrite.java.migrate.DeprecatedLogRecordThreadID
-  - org.openrewrite.java.migrate.RemovedLegacySunJSSEProviderName
-  - org.openrewrite.java.migrate.Jre17AgentMainPreMainPublic
-
----
-type: specs.openrewrite.org/v1beta/recipe
-name: org.openrewrite.java.migrate.DeprecatedJavaxSecurityCert
-displayName: Use `java.security.cert` instead of `javax.security.cert`
-description: The `javax.security.cert` package has been deprecated for removal.
+name: com.amazonaws.elasticgumby.java.migrate.SetJavaVersion17
+displayName: Change Maven Java version property values to 17
+description: Change maven.compiler.source and maven.compiler.target values to 17.
 tags:
   - java17
+  - compiler
 recipeList:
-  - org.openrewrite.java.ChangePackage:
-      oldPackageName: javax.security.cert
-      newPackageName: java.security.cert
----
-type: specs.openrewrite.org/v1beta/recipe
-name: org.openrewrite.java.migrate.RemovedLegacySunJSSEProviderName
-displayName: Use `SunJSSE` instead of `com.sun.net.ssl.internal.ssl.Provider`
-description: The `com.sun.net.ssl.internal.ssl.Provider` provider name was removed.
-tags:
-  - java17
-recipeList:
-  - org.openrewrite.java.migrate.ReplaceStringLiteralValue:
-      oldLiteralValue: com.sun.net.ssl.internal.ssl.Provider
-      newLiteralValue: SunJSSE
----
-type: specs.openrewrite.org/v1beta/recipe
-name: org.openrewrite.java.migrate.DeprecatedLogRecordThreadID
-displayName: Adopt `setLongThreadID` in `java.util.logging.LogRecord`
-description: Avoid using the deprecated methods in `java.util.logging.LogRecord`
-tags:
-  - java17
-recipeList:
-  - org.openrewrite.java.ChangeMethodName:
-      methodPattern: java.util.logging.LogRecord getThreadID()
-      newMethodName: getLongThreadID
-  - org.openrewrite.java.migrate.ChangeMethodInvocationReturnType:
-      methodPattern: java.util.logging.LogRecord getLongThreadID()
-      newReturnType: long
-  - org.openrewrite.java.ChangeMethodName:
-      methodPattern: java.util.logging.LogRecord setThreadID(int)
-      newMethodName: setLongThreadID
----
-type: specs.openrewrite.org/v1beta/recipe
-name: org.openrewrite.java.migrate.Jre17AgentMainPreMainPublic
-displayName: Set visibility of `premain` and `agentmain` methods to `public`
-description: Check for a behavior change in Java agents.
-tags:
-  - java17
-recipeList:
-  - org.openrewrite.java.ChangeMethodAccessLevel:
-      methodPattern: "*..* agentmain(java.lang.String)"
-      newAccessLevel: public
-  - org.openrewrite.java.ChangeMethodAccessLevel:
-      methodPattern: "*..* agentmain(java.lang.String, java.lang.instrument.Instrumentation)"
-      newAccessLevel: public
-  - org.openrewrite.java.ChangeMethodAccessLevel:
-      methodPattern: "*..* premain(java.lang.String)"
-      newAccessLevel: public
-  - org.openrewrite.java.ChangeMethodAccessLevel:
-      methodPattern: "*..* premain(java.lang.String, java.lang.instrument.Instrumentation)"
-      newAccessLevel: public
+  - org.openrewrite.java.migrate.UpgradeJavaVersion:
+      version: 17
+  - org.openrewrite.maven.UpgradePluginVersion:
+      groupId: org.apache.maven.plugins
+      artifactId: maven-compiler-plugin
+      newVersion: 3.6.2
+  - org.openrewrite.java.migrate.maven.UseMavenCompilerPluginReleaseConfiguration:
+      releaseVersion: 17
