--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<start-class>net.lkrnac.blog.spyingonconfig.Application</start-class>
 		<java.version>1.8</java.version>
-	<maven.compiler.source>1.8</maven.compiler.source><maven.compiler.target>1.8</maven.compiler.target><maven.compiler.release>1.8</maven.compiler.release></properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.release>1.8</maven.compiler.release>
+	</properties>
 
 	<build>
 		<plugins>
